# relentless-revenge

./: .gitignore  Cargo.toml  README.md  notes.todo
.cargo/: config.toml
assets/: domains.yaml  enemy.ron  iso_map.tmx  level.progression.yaml  map.tmx  map_old.tmx
assets/entities/enemies/: bosses.yaml  data.yaml  enemy.yaml  flying_eye.yaml.enemy  mushroom.yaml  mushroom.yaml.enemy  yaml.enemy
assets/entities/player/: player.proto.yaml  player.yaml  yaml.player
assets/floors/: medium.yaml.floor  start.yaml.floor
assets/levels/: medium.yaml.level  start.yaml.level  yaml.level
src/: .attack.rs.rustfmt  animation.rs  attack.rs  boss.rs  collision.rs  controller.rs  direction.rs  effects.rs  enemy.rs  floor.rs  follow.rs  helper.rs  level.rs  main.rs  metadata.rs  movement.rs  player.rs  prototype.rs  sorting.rs  state.rs  statistics.rs  stats.rs  ui.rs
src/enemy/: state_machine.rs
src/game_states/: ingame.rs  loading.rs  menu.rs  mod.rs
src/manifest/: boss.rs  enemy.rs  floor.rs  mod.rs  player.rs
src/map/: bridge.rs  generation.rs  map.rs  mod.rs  room.rs  walkable.rs
src/menus/: ingame.rs  mod.rs
src/metadata/: asset_loaders.rs
src/movement/: direction.rs  easing.rs  mod.rs  movement.rs
src/ui/: boss.rs  mod.rs
