[package]
edition = "2021"
name = "isometric"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.0", features = ["dynamic_linking"] }
bevy_egui = "0.21.0"
bevy_rapier2d = "0.22"
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main" }

#big-brain = "0.16.0"
seldom_state = "0.7"

leafwing-input-manager = "0.10.0"

bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_common_assets = { version = "0.7.0", features = ["yaml"] }

turborand = "0.10.0"
serde = "1.0"
serde_yaml = "0.9"
bevy-persistent = { version = "0.3.1", features = ["all"] }
dirs = "5.0.0"
noisy_bevy = "0.4.0"

# Otimizations to speed up compilation in debug mode
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
