[package]
edition = "2021"
name = "isometric"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13", features = ["dynamic_linking"] }
bevy_egui = "0.27.0"
bevy_rapier2d = "0.25"
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main" }

#big-brain = "0.16.0"
seldom_state = "0.10"

leafwing-input-manager = "0.13"
leafwing_manifest = {version = "0.1.0", features = ["yaml"]}

#bevy_asset_loader = { version = "0.20", features = ["2d"] }
bevy_common_assets = { version = "0.10", features = ["yaml"] }

turborand = "0.10.0"
dirs = "5.0"
serde = "1.0"
bevy-persistent = { version = "0.5", features = ["all"] }
noisy_bevy = "0.6"

# Otimizations to speed up compilation in debug mode
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
